# HW9_mois

./: pyproject.toml
HW9/: config.ini  main.py  main8.py  main9.py  main9_2.py  models.py  pyproject.toml  seeds.py
HW9/HW9/: pipelines.py  settings.py
HW9/HW9/spiders/: authors_spider.py  quotes_spider.py
